--- a/.github/workflows/broken-link-check.yml
+++ b/.github/workflows/broken-link-check.yml
@@ -15,4 +15,4 @@ jobs:
         uses: ruzickap/action-my-broken-link-checker@v2
         with:
           url: https://pyrsia.io/
-          cmd_params: "--max-connections=3 --color=always"  # Refer to https://github.com/raviqqe/muffet/blob/main/arguments.go
+          cmd_params: "--one-page-only --max-connections=3 --color=always"  # Refer to https://github.com/raviqqe/muffet/blob/main/arguments.go
