--- a/.github/workflows/broken-link-check.yml
+++ b/.github/workflows/broken-link-check.yml
@@ -7,13 +7,19 @@ on:
   push: # for test
 
 jobs:
-  check:
-    name: Broken Link Check
+  broken_link_checker_job:
     runs-on: ubuntu-latest
+    name: Check for broken links
     steps:
-      - name: Broken Link Check
-        uses: technote-space/broken-link-checker-action@v2
+      - name: Check for broken links
+        id: link-report
+        uses: celinekurpershoek/link-checker@v1.0.2
         with:
-          TARGET: "https://pyrsia.io/"
-          RECURSIVE: true
-          GITHUB_TOKEN: ${{secrets.gh_token}}
+          # Required:
+          url: "https://pyrsia.io/"
+          # optional:
+          honorRobotExclusions: false
+          ignorePatterns: ""
+          recursiveLinks: true
+      - name: Get the result
+        run: echo "${{steps.link-report.outputs.result}}"
