--- a/.github/workflows/broken-link-check.yml
+++ b/.github/workflows/broken-link-check.yml
@@ -23,6 +23,7 @@ jobs:
           recursiveLinks: true
       - name: Get the result
         run: echo "${{steps.link-report.outputs.result}}"
+      - uses: actions/checkout@v2
       - uses: JasonEtco/create-an-issue@v2
         if: ${{ failure() }}
         env:
